unpackaged/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <description>WEX Project Issue. Used to track project issues and tasks.</description>
    <label>Issue</label>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>