unpackaged/main/default/objects/Issue__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Issue description, to detail the steps required to implement this.</description>
    <inlineHelpText>Enter an issue description.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>