unpackaged/main/default/objects/Issue__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The due date of this issue.</description>
    <inlineHelpText>The due date of this issue.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>