unpackaged/main/default/objects/Issue__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>The associated milestone for this issue.</description>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>