unpackaged/main/default/objects/Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of this issue.</description>
    <inlineHelpText>The status of this issue.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>