unpackaged/main/default/objects/Issue__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <description>A bug is a problem which impairs or prevents the functions of a product.</description>
    <label>Bug</label>
</RecordType>