unpackaged/main/default/objects/Issue__c/recordTypes/User_Story.recordType-meta.xml
<RecordType>
    <fullName>User_Story</fullName>
    <active>true</active>
    <description>A user story is the smallest unit of work that needs to be done.</description>
    <label>User Story</label>
</RecordType>